--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
       <section class="about-us">
         <div class="container">
           <h2 class="visually-hidden">About us</h2>
+          <ul class="about-us-icon">
+            <li class="about-us-icon-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </li>
+            <li class="about-us-icon-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </li>
+            <li class="about-us-icon-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </li>
+            <li class="about-us-icon-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </li>
+          </ul>
           <ul class="about-us-list">
             <li class="about-us-list-item">
               <h3 class="about-us-title">Strategy</h3>
@@ -229,6 +251,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <p>Social media</p>
       </div>
     </footer>
   </body>
