--- a/index.html
+++ b/index.html
@@ -138,6 +138,36 @@
                 <h3 class="names">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
               </div>
+              <ul class="team-icon-list">
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-item">
               <img
@@ -149,6 +179,36 @@
                 <h3 class="names">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
+              <ul class="team-icon-list">
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-item">
               <img
@@ -160,6 +220,36 @@
                 <h3 class="names">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
               </div>
+              <ul class="team-icon-list">
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-item">
               <img
@@ -171,6 +261,36 @@
                 <h3 class="names">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
               </div>
+              <ul class="team-icon-list">
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-icon-list-item">
+                  <a class="team-icon-item" href="">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -243,15 +363,49 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="index.html" class="footer-logo">
-          web<span class="footer-logo-studio">Studio</span>
-        </a>
-        <p class="footer-txt">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-        <p>Social media</p>
+      <div class="container footer-container">
+        <divc class="footer-logo-container">
+          <a href="index.html" class="footer-logo">
+            web<span class="footer-logo-studio">Studio</span>
+          </a>
+          <p class="footer-txt">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </divc>
+        <div class="footer-icon-container">
+          <p class="footer-icon-txt">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-list-item">
+              <a href="" class="footer-icon-item">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-item">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-item">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-item">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
