--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <divc class="footer-logo-container">
+        <div class="footer-logo-container">
           <a href="index.html" class="footer-logo">
             web<span class="footer-logo-studio">Studio</span>
           </a>
@@ -372,7 +372,7 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
-        </divc>
+        </div>
         <div class="footer-icon-container">
           <p class="footer-icon-txt">Social media</p>
           <ul class="footer-icon-list">
