--- a/index.html
+++ b/index.html
@@ -298,9 +298,22 @@
       <section class="our-portfolio">
         <div class="container">
           <h2 id="portfolio" class="our-portfolio-title">Our portfolio</h2>
-          <ul class="portfolio-list-container">
-            <li class="portfolio-list-item">
-              <img src="./images/our_portfolio/app.jpg" alt="app" width="360" />
+          <ul class="portfolio-list-container portfolio-app">
+            <li class="portfolio-list-item portfolio-overlay">
+              <div class="portfolio-img-container">
+                <img
+                  src="./images/our_portfolio/app.jpg"
+                  alt="app"
+                  width="360"
+                />
+                <div class="overlay-container">
+                  <p class="overlay-txt">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-txt-container">
                 <h3 class="our-portfolio-list">Banking App</h3>
                 <p class="our-portfolio-txt">App</p>
