--- a/index.html
+++ b/index.html
@@ -396,21 +396,21 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icon-list-item">
               <a href="" class="footer-icon-item">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icon-list-item">
               <a href="" class="footer-icon-item">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icon-list-item">
               <a href="" class="footer-icon-item">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
