--- a/index.html
+++ b/index.html
@@ -306,65 +306,102 @@
                   alt="app"
                   width="360"
                 />
-                <div class="overlay-container">
-                  <p class="overlay-txt">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-container overlay-txt">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-txt-container">
                 <h3 class="our-portfolio-list">Banking App</h3>
                 <p class="our-portfolio-txt">App</p>
               </div>
             </li>
-            <li class="portfolio-list-item">
-              <img src="./images/our_portfolio/pay.jpg" alt="pay" width="360" />
+            <li class="portfolio-list-item portfolio-overlay">
+              <div class="portfolio-img-container">
+                <img
+                  src="./images/our_portfolio/pay.jpg"
+                  alt="pay"
+                  width="360"
+                />
+                <p class="overlay-container overlay-txt">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-txt-container">
                 <h3 class="our-portfolio-list">Cashless Payment</h3>
                 <p class="our-portfolio-txt">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/our_portfolio/laptop.jpg"
-                alt="laptop"
-                width="360"
-              />
+            <li class="portfolio-list-item portfolio-overlay">
+              <div class="portfolio-img-container">
+                <img
+                  src="./images/our_portfolio/laptop.jpg"
+                  alt="laptop"
+                  width="360"
+                />
+                <p class="overlay-container overlay-txt">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-txt-container">
                 <h3 class="our-portfolio-list">Meditation App</h3>
                 <p class="our-portfolio-txt">App</p>
               </div>
             </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/our_portfolio/drive.jpg"
-                alt="drive"
-                width="360"
-              />
+            <li class="portfolio-list-item portfolio-overlay">
+              <div class="portfolio-img-container">
+                <img
+                  src="./images/our_portfolio/drive.jpg"
+                  alt="drive"
+                  width="360"
+                />
+                <p class="overlay-container overlay-txt">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-txt-container">
                 <h3 class="our-portfolio-list">Taxi Service</h3>
                 <p class="our-portfolio-txt">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/our_portfolio/smartphone.jpg"
-                alt="smartphone"
-                width="360"
-              />
+            <li class="portfolio-list-item portfolio-overlay">
+              <div class="portfolio-img-container">
+                <img
+                  src="./images/our_portfolio/smartphone.jpg"
+                  alt="smartphone"
+                  width="360"
+                />
+                <p class="overlay-container overlay-txt">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-txt-container">
                 <h3 class="our-portfolio-list">Screen Illustrations</h3>
                 <p class="our-portfolio-txt">Design</p>
               </div>
             </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/our_portfolio/girl.jpg"
-                alt="girl"
-                width="360"
-              />
+            <li class="portfolio-list-item portfolio-overlay">
+              <div class="portfolio-img-container">
+                <img
+                  src="./images/our_portfolio/girl.jpg"
+                  alt="girl"
+                  width="360"
+                />
+                <p class="overlay-container overlay-txt">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-txt-container">
                 <h3 class="our-portfolio-list">Online Courses</h3>
                 <p class="our-portfolio-txt">Marketing</p>
