--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             >Web<span class="nav-logo-studio">Studio</span></a
           >
           <ul class="nav-title">
-            <li class="nav-list nav-item-studio">
-              <a href="./index.html" class="nav-list-item">Studio</a>
+            <li class="nav-list">
+              <a href="./index.html" class="nav-list-item studio">Studio</a>
             </li>
             <li class="nav-list">
               <a href="" class="nav-list-item">Portfolio</a>
@@ -298,7 +298,7 @@
       <section class="our-portfolio">
         <div class="container">
           <h2 id="portfolio" class="our-portfolio-title">Our portfolio</h2>
-          <ul class="portfolio-list-container portfolio-app">
+          <ul class="portfolio-list-container">
             <li class="portfolio-list-item portfolio-overlay">
               <div class="portfolio-img-container">
                 <img
