--- a/index.html
+++ b/index.html
@@ -70,30 +70,13 @@
       <section class="about-us">
         <div class="container">
           <h2 class="visually-hidden">About us</h2>
-          <ul class="about-us-icon">
-            <li class="about-us-icon-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
-            </li>
-            <li class="about-us-icon-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
-            </li>
-            <li class="about-us-icon-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
-            </li>
-            <li class="about-us-icon-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-            </li>
-          </ul>
           <ul class="about-us-list">
             <li class="about-us-list-item">
+              <div class="about-us-icon-container">
+                <svg class="about-us-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="about-us-title">Strategy</h3>
               <p class="about-us-txt">
                 Our goal is to identify the business problem to walk away with
@@ -101,6 +84,11 @@
               </p>
             </li>
             <li class="about-us-list-item">
+              <div class="about-us-icon-container">
+                <svg class="about-us-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="about-us-title">Punctuality</h3>
               <p class="about-us-txt">
                 Bring the key message to the brand's audience for the best price
@@ -108,6 +96,11 @@
               </p>
             </li>
             <li class="about-us-list-item">
+              <div class="about-us-icon-container">
+                <svg class="about-us-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="about-us-title">Diligence</h3>
               <p class="about-us-txt">
                 Research and confirm brands that present the strongest digital
@@ -115,6 +108,11 @@
               </p>
             </li>
             <li class="about-us-list-item">
+              <div class="about-us-icon-container">
+                <svg class="about-us-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="about-us-title">Technologies</h3>
               <p class="about-us-txt">
                 Design practice focused on digital experiences. We bring forth a
